<resources>
    <string name="app_name">Android Thermostat Client</string>
    <string name="temp_calibration">Temperature Calibration</string>
    <string name="temp_calibration_help">It is sometimes necessary to adjust the registered temperature up or down a few degrees to compensate for hot or cold pockets where the thermostat is placed.  Enter a possitive number to increase the reported temperature or negative to decrease it.</string>
    <string name="temp_calibration_running">Temperature Calibration Running</string>
    <string name="temp_calibration_running_help">If the thermostat is placed by a vent or intake it may be necessary to have a different calibration when the furnace is running than when it is idle.  Enter a possitive number to increase the reported temperature or negative to decrease it.</string>
    <string name="calibration_seconds">Temperature Calibration Seconds</string>
    <string name="calibration_seconds_help">The number of seconds it takes to transition from the running calibration to the idle calibration or back.  The relays warm up and cool down over a period of about 5 minutes.  If these are affecting your temperature readings you may wish to add different values for the idle and running temperature calibrations and transition between them over a period of 5 minutes (300 seconds).</string>
    <string name="temp_swing">Temperature Swing</string>
    <string name="temp_swing_help">The temperature swing indicates how many degrees to allow the temperature to rise or fall below the set point before the air conditioner or heater turns on to return the temperature to the set point.  Larger swings are generally more energy efficient.</string>
    <string name="fan_on_cool">Fan On with Cool</string>
    <string name="fan_on_cool_help">If your home was built with air conditioning then the furnace will most likely automatically turn on the blower when the thermostat triggers the AC to turn on.  In this case it is better not to separately send the command to turn on the fan and you should set this to No. If your AC was added after the home was built, the fan may need to be controlled seperately by setting this to Yes.</string>
    <string name="fan_circulation">Fan Circulation</string>
    <string name="fan_circulation_help">This sets how often the fan will circulate the air in your house regardless of other heat and cool settings.  One scenario where this is useful is if your upstairs heater doesn\'t turn on frequently in the winter.  You casn have the upstair fan circulate periodically to evenly distribute the heat rising from downstairs to each room.</string>
    <string name="min_cool">Minimum Coooling Interval</string>
    <string name="min_cool_help">The minimum number of minutes between cooling cycles. To avoid short cycling your air conditioner it is recommended that you wait 5 minutes between air conditioning cycles to allow the refridgeration system to equalize.</string>
    <string name="min_heat">Minimum Heating Interval</string>
    <string name="min_heat_help">Minimum number of minutes between heat cycles.  Gas furnaces have a safety lockout in case the burner fails to ignite.  On some models turning the heater off and back on will reset this lockout.  It\'s recommended you keep the cycle interval above 2 minutes to avoid to allow any unignited gas to dissipate before trying again.</string>
    <string name="name">Name</string>
    <string name="name_help">A diplay name for your thermostat such as Downstairs.</string>
    <string name="location">Location</string>
    <string name="location_help">Enter a US zip code or city, country to be used for pulling the current weather conditions.  Examples: &quot;90210&quot; or &quot;Madrid, Spain&quot;</string>
    <string name="password">Password</string>
    <string name="password_help">Optional:  Enter a password that clients must send to control the thermostat.  This is useful if you wish to expose your thermostat to the Internet so you can control it remotely.</string>
    <string name="forecast_url">Forecast Url</string>
    <string name="forecast_url_help">Enter the url you would like the application to launch when you click the ouside conditions to view the forecast.  You can use [postalCode] in the url to substitute the value from the location field.</string>
    <string name="usage_tracking">Usage Tracking</string>
    <string name="usage_tracking_help">The thermostat can ping an outside tracking service such as ThermostatMonitor.com to monitor your usage history.  If you would like to enable this, sign up with a service and enter the settings they provide here.</string>
    <string name="thermostat_key">Thermostat Key</string>
    <string name="thermostat_key_help">Sign up at ThermostatMonitor.com and click the edit link next to your thermsotat.  Enter the key value shown there in this field.</string>
    <string name="scale">Temperature scale</string>
    <string name="scale_help">Sets whether the temperatures displayed are in Fahrenheit or Celsius.  This only changes how the temperatures are displayed within the client.  The server API alrways returns Farhenheit.</string>
    <string name="hardware_help">You need to indicate which version of the Android Thermostat hardware you are using.  If you had to make the circuit board yourself, it\'s Revision A, if you were able to order the pre-made board it\'s B.  Check the assembly instructions at AndroidThermostat.com if you are unsure.</string>

    <string name="City">City</string>
    <string name="Date">Date</string>
    <string name="OutTemp">OutTemp</string>
    <string name="action_settings">action_settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
