<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:atc="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:gravity="left"
                android:text="Name" />

            <EditText
                android:id="@+id/nameText"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:inputType="text" />

            <com.mawsom.mawsom.mawsomnobl.controls.HelpControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                atc:message_id="@string/name_help"
                atc:title_id="@string/name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:gravity="left"
                android:text="Location" />

            <EditText
                android:id="@+id/locationText"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:inputType="text" />

            <com.mawsom.mawsom.mawsomnobl.controls.HelpControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                atc:message_id="@string/location_help"
                atc:title_id="@string/location" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:gravity="left"
                android:text="Password" />

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:password="true" />

            <com.mawsom.mawsom.mawsomnobl.controls.HelpControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                atc:message_id="@string/password_help"
                atc:title_id="@string/password" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:gravity="left"
                android:text="Forecast Url" />

            <EditText
                android:id="@+id/forecastUrlText"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="75" />

            <com.mawsom.mawsom.mawsomnobl.controls.HelpControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                atc:message_id="@string/forecast_url_help"
                atc:title_id="@string/forecast_url" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:gravity="left"
                android:text="Temperature Scale" />

            <RadioGroup
                android:id="@+id/scaleRadio"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/scaleF"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:text="Fahrenheit " />

                <RadioButton
                    android:id="@+id/scaleC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Celsius" />
            </RadioGroup>

            <com.mawsom.mawsom.mawsomnobl.controls.HelpControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                atc:message_id="@string/scale_help"
                atc:title_id="@string/scale" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>