<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:atc="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="left"
                android:text="Hardware Revision" />

            <RadioGroup
                android:id="@+id/hardwareRadio"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/hardware1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="A" />

                <RadioButton
                    android:id="@+id/hardware2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="B" />
            </RadioGroup>

            <com.mawsom.mawsom.mawsomnobl.controls.HelpControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                atc:message_id="@string/hardware_help"
                atc:title_id="@string/temp_swing" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="left"
                android:text="Temperature Swing" />

            <RadioGroup
                android:id="@+id/swingRadio"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/swing1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1" />

                <RadioButton
                    android:id="@+id/swing2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2" />

                <RadioButton
                    android:id="@+id/swing3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3" />
            </RadioGroup>

            <com.mawsom.mawsom.mawsomnobl.controls.HelpControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                atc:message_id="@string/temp_swing_help"
                atc:title_id="@string/temp_swing" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="Temp. Calibration" />

            <EditText
                android:id="@+id/temperatureCalibration"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:inputType="numberDecimal|numberSigned" />

            <com.mawsom.mawsom.mawsomnobl.controls.HelpControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                atc:message_id="@string/temp_calibration_help"
                atc:title_id="@string/temp_calibration" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="Running Calib." />

            <EditText
                android:id="@+id/temperatureCalibrationRunning"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:inputType="numberDecimal|numberSigned" />

            <com.mawsom.mawsom.mawsomnobl.controls.HelpControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                atc:message_id="@string/temp_calibration_running_help"
                atc:title_id="@string/temp_calibration_running" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="Calib. Seconds" />

            <EditText
                android:id="@+id/calibrationSeconds"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:inputType="number" />

            <com.mawsom.mawsom.mawsomnobl.controls.HelpControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                atc:message_id="@string/calibration_seconds_help"
                atc:title_id="@string/calibration_seconds" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="left"
                android:text="Run Fan w/Cool" />

            <RadioGroup
                android:id="@+id/fanOnCoolRadio"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/fanOnCoolYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes" />

                <RadioButton
                    android:id="@+id/fanOnCoolNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No" />
            </RadioGroup>

            <com.mawsom.mawsom.mawsomnobl.controls.HelpControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                atc:message_id="@string/fan_on_cool_help"
                atc:title_id="@string/fan_on_cool" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="left"
                android:paddingTop="20sp"
                android:text="Min. Cool Cycle" />

            <EditText
                android:id="@+id/minCoolInterval"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:inputType="number" />

            <com.mawsom.mawsom.mawsomnobl.controls.HelpControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                atc:message_id="@string/min_cool_help"
                atc:title_id="@string/min_cool" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="left"
                android:paddingTop="20sp"
                android:text="Min. Heat Cycle" />

            <EditText
                android:id="@+id/minHeatInterval"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:inputType="number" />

            <com.mawsom.mawsom.mawsomnobl.controls.HelpControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                atc:message_id="@string/min_heat_help"
                atc:title_id="@string/min_heat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="left"
                android:paddingTop="20sp"
                android:text="Fan circulation" />

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:orientation="horizontal" >

                <ToggleButton
                    android:id="@+id/cycleFanSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="Off"
                    android:textOn="On" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Turn on for " />

                        <EditText
                            android:id="@+id/cycleFanOnText"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" minutes" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="then off for " />

                        <EditText
                            android:id="@+id/cycleFanOffText"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" minutes. " />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <com.mawsom.mawsom.mawsomnobl.controls.HelpControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                atc:message_id="@string/fan_circulation_help"
                atc:title_id="@string/fan_circulation" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>