<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:atc="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <Button
            android:id="@+id/usageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="20dp"
            android:text="View Usage" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="Tracking Service:" />

            <RadioGroup
                android:id="@+id/serviceRadio"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/serviceThermostatMonitor"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:text="ThermostatMonitor.com" />

                <RadioButton
                    android:id="@+id/serviceOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Other" />
            </RadioGroup>

            <com.mawsom.mawsom.mawsomnobl.controls.HelpControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                atc:message_id="@string/usage_tracking_help"
                atc:title_id="@string/usage_tracking" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thermostatMonitorHolder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="Thermostat Key:" />

            <EditText
                android:id="@+id/thermostatKey"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:inputType="text" />

            <com.mawsom.mawsom.mawsomnobl.controls.HelpControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                atc:message_id="@string/thermostat_key_help"
                atc:title_id="@string/thermostat_key" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/otherHolder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="5sp"
                android:text="Base Url:" />

            <EditText
                android:id="@+id/baseUrl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="5sp"
                android:text="Cycle Complete Parameters:" />

            <EditText
                android:id="@+id/cycleCompleteParams"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="5sp"
                android:text="Inside Temperature Change Parameters:" />

            <EditText
                android:id="@+id/insideTempParams"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="5sp"
                android:text="Outside Temperature Change Parameters:" />

            <EditText
                android:id="@+id/outsideTempParams"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="5sp"
                android:text="View Stats Parameters:" />

            <EditText
                android:id="@+id/viewStatsParams"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>